--- a/src/styles/sass/components/btn.scss
+++ b/src/styles/sass/components/btn.scss
@@ -7,12 +7,13 @@
   width         : 16rem;
 
   &__container {
-    border-bottom  : .3px solid gray;
-    display        : flex;
-    margin         : 3rem 0;
-    padding-bottom : 2rem;
-    place-items    : center;
-    place-content  : center;
-    width          : 100%
+    //border-bottom  : .3px solid gray;
+    //display        : flex;
+    //margin         : 3rem 0;
+    //padding-bottom : 2rem;
+    //place-items    : center;
+    //place-content  : center;
+    //width          : 100%
+    margin : 3rem 3.5rem;
   }
 }
